--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "bstree"
+path = "src/bstree.rs"
+
 [dependencies]
 clap = "3.0.0-beta.2"
