Exercise (btree): Wrapping up, lots of changes.
Renamed `bstree` to `btree` since it's not sorted. Well it's kind of
sorted, but not sorted usefully. Just sorted by value, not
tree-searching sorted.

I also decided to wrap up the btree exercise. There's loads of
bike-shedding I could work on, but my rust experience is really limiting
my ability to sort trees.

Instead of making my own CLI, I'm just using examples for interactive
demos. Much better to use somebody elses CLI than roll your own when
that's not the focus.

Also added a README to the `rust` projects outlining how to run tests
and examples.

Finally removed the `clap` dependency and added a `text_io` dependency
for processing user interactive input.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
-name = "rust-exercises"
+name = "exercises"
 version = "0.1.0"
 authors = ["Elijah Voigt <elijah.caine.mv@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
-name = "bstree"
-path = "src/bstree.rs"
+bench = false
 
 [dependencies]
-clap = "3.0.0-beta.2"
+text_io = "0.1.8"
